# Recommendation-Systems

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  train.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/recsys/: ab_testing.py  cli.py  explain.py  llm_embeddings.py  monitoring.py  registry.py  tracking.py  vector_store.py
backend/recsys/api/: main.py
backend/recsys/data/: mind.py  movielens.py
backend/recsys/evaluation/: metrics.py  runner.py  split.py
backend/recsys/models/: base.py  cold_start.py  collaborative.py  content_based.py  gru4rec.py  hybrid.py  popularity.py  two_tower.py
backend/tests/: test_api.py  test_models.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: BackendStatus.tsx  Button.tsx  Card.tsx  CompareView.tsx  DomainTabs.tsx  EmptyState.tsx  ErrorState.tsx  EvaluationView.tsx  Header.tsx  MetricsBar.tsx  RecommendationCard.tsx  Skeleton.tsx  StatTile.tsx  ThemeProvider.tsx  UserHistoryList.tsx  UsersBrowser.tsx
frontend/src/lib/: api.ts  cn.ts  types.ts
helm/recsys/: Chart.yaml  values.yaml
helm/recsys/templates/: _helpers.tpl  backend.yaml  frontend.yaml  ingress.yaml  mlflow.yaml  (+3 more)
k8s/: backend.yaml  frontend.yaml  ingress.yaml  mlflow.yaml  pvc.yaml  qdrant.yaml
monitoring/: prometheus.yml
(+7 files in other folders)
