[project]
name = "recsys"
version = "0.1.0"
description = "Video + Article recommendation systems research harness"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "implicit>=0.7.2",
    "torch>=2.1",
    "requests>=2.31",
    "tqdm>=4.66",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "mlflow>=2.14",
    "structlog>=24.1",
    "qdrant-client>=1.13",
    "evidently>=0.6",
    "sentence-transformers>=3.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["recsys*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
